--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -19,8 +19,8 @@ jobs:
         uses: burnett01/rsync-deployments@6.0.0
         with:
           switches: -avzr 
-          path: ./stock-with-cicd
-          remote_path: /home/ubuntu/
+          path: ./
+          remote_path: /home/ubuntu/stock-with-cicd/
           remote_host: ${{ secrets.EC2_HOST }}
           remote_user: ${{ secrets.EC2_USERNAME }}
           remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
