--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ master ] # 當 feature branch 合併到 master，也會觸發 CI
 
+permissions:
+  pull-requests: write
+  issues: write
+  contents: read
+
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -22,8 +27,8 @@ jobs:
           context: .
           push: false
           tags: myimage:latest
-          cache-from: type=gha # type=local, src=.buildx-cache
-          cache-to: type=gha   # type=local, mode=max, dest=.buildx-cache
+          cache-from: type=gha 
+          cache-to: type=gha
 
       - name: Build Test Docker Image
         run: docker build -t airflow-test -f test/Dockerfile.test .
