--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,8 @@
 name: CI
 
 on:
-  push:
-    branches: [ master, 'feature/*', 'fix/*' ] # 只要 push commit 到指定 branch (如 master, feature/*, fix/*)，就會觸發 CI
   pull_request:
-    branches: [ master ] # 當 feature branch 合併到 master，也會觸發 CI
+    branches: [ master ]
 
 permissions:
   pull-requests: write
@@ -47,3 +45,12 @@ jobs:
           body: |
             🎉 **BUILD SUCCESS**
             All tests passed, CI build successful!
+
+      - name: Comment BUILD FAILURE on PR
+        if: github.event_name == 'pull_request' && failure()
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            ❌ **BUILD FAILURE**
+            Some tests failed, CI build unsuccessful. Please check the logs for details.
